updated payment update api
